<resources>
    <string name="app_name">Test-git</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    //Added new strings
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Войдите</string>
    <string name="login">Логин</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="enter2">Войти</string>
    <string name="enter_using_google">Войти с помощью Google</string>
    <string name="enter_using_facebook">Войти с помощью Facebook</string>
    <string name="or">или</string>
    <string name="no_account_register_it">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="recover_email">Восстановление пароля</string>
    <string name="confirm">Подтвердить</string>
    <string name="send_code_after">Отправить код заново через</string>
    <string name="code_sent_on_email">Введите код отправленный на почту</string>
    <string name="email_example">example@gmail.com</string>
    <string name="email">Эл.почта</string>
    <string name="find_mentor_board1">Найди ментора мечты или стань им</string>
    <string name="continue_board1">Далее</string>
    <string name="only_best_mentors">Только лучшие ментора</string>
    <string name="skip">Пропустить</string>

    <string name="todo">TODO</string>

    <string name="repeat">Повторить</string>
    <string name="exit">Выйти</string>
    <string name="no_internet_desc">Попробуйте переподключиться или\n перейти на мобильный интернет</string>
    <string name="bad_connection">Плохое соединение</string>
    <string name="close_sign">×</string>

</resources>