<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.ui.AuthFragment"
    android:background="@color/white_new">

   <TextView
       android:id="@+id/arrow_main"
       android:layout_width="24dp"
       android:layout_height="24dp"
       android:background="@drawable/baseline_arrow_back"
       android:layout_marginTop="83dp"
       android:layout_marginLeft="21dp"
       />
   <ImageView
       android:layout_width="46dp"
       android:layout_height="67dp"
       android:src="@drawable/logo_small"
       android:layout_gravity="center|top"
       android:layout_marginTop="72dp"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/enter"
       android:textSize="24sp"
       android:fontFamily="@font/roboto_regular"
       android:layout_marginTop="179dp"
       android:layout_marginLeft="16dp"
       android:textColor="@color/black_new"
       />
   <EditText
       android:id="@+id/et_login_main"
       android:layout_width="328dp"
       android:layout_height="48dp"
       android:hint="@string/login"
       android:layout_gravity="center|top"
       android:layout_marginTop="223dp"
       android:drawableLeft="@drawable/login_vector"
       android:paddingLeft="16dp"
       android:textSize="14sp"
       style="@style/et_white_and_black"
       />
   <EditText
       android:id="@+id/et_password_main"
       android:layout_width="328dp"
       android:layout_height="48dp"
       android:hint="@string/password"
       android:drawableLeft="@drawable/lock_vector"
       android:paddingLeft="16dp"
       android:layout_marginTop="279dp"
       android:layout_gravity="center|top"
       android:textSize="14sp"
       style="@style/et_white_and_black"
       android:drawableRight="@drawable/eye_vector"
       android:paddingRight="16dp"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/forgot_your_password"
       android:textSize="14sp"
       android:textColor="@color/black_new"
       android:fontFamily="@font/roboto_medium"
       android:layout_gravity="right"
       android:layout_marginTop="343dp"
       android:layout_marginRight="16dp"
       />
   <com.google.android.material.button.MaterialButton
       android:id="@+id/btn_enter_main"
       android:layout_width="328dp"
       android:layout_height="58dp"
       app:cornerRadius="10dp"
       android:layout_gravity="center|top"
       android:layout_marginTop="383dp"
       android:text="@string/enter2"
       style="@style/btn_white_and_black"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/or"
       android:textSize="16sp"
       android:fontFamily="@font/roboto_regular"
       android:textColor="@color/black_new"
       android:layout_gravity="center|top"
       android:layout_marginTop="463dp"
       />
   <com.google.android.material.button.MaterialButton
       android:id="@+id/btn_enter_google"
       android:layout_width="328dp"
       android:layout_height="58dp"
       android:layout_gravity="center|top"
       android:layout_marginTop="514dp"
       app:strokeColor="@color/black_new"
       android:backgroundTint="@color/white_new"
       app:strokeWidth="1dp"
       app:cornerRadius="10dp"
       android:text="@string/enter_using_google"
       android:fontFamily="@font/roboto_medium"
       android:textSize="14sp"
       android:textColor="@color/black_new"
       android:textAllCaps="false"
       android:drawableLeft="@drawable/google_vector"

       />
   <com.google.android.material.button.MaterialButton
       android:id="@+id/btn_enter_facebook"
       android:layout_width="328dp"
       android:layout_height="58dp"
       android:layout_gravity="center|top"
       android:layout_marginTop="570dp"
       app:strokeColor="@color/black_new"
       android:backgroundTint="@color/white_new"
       app:strokeWidth="1dp"
       app:cornerRadius="10dp"
       android:text="@string/enter_using_facebook"
       android:fontFamily="@font/roboto_medium"
       android:textSize="14sp"
       android:textColor="@color/black_new"
       android:textAllCaps="false"
       android:drawableLeft="@drawable/facebook_vector"
       />
   <TextView
       android:id="@+id/tv_register_account"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:text="@string/no_account_register_it"
       android:layout_gravity="center|top"
       android:layout_marginTop="650dp"
       android:fontFamily="@font/roboto_medium"
       android:textSize="16sp"
       android:textColor="@color/black_new"
       />
</FrameLayout>