<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/secondOnBoard"
    android:background="@color/black_new">
    <ImageView
        android:id="@+id/arrow_board2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow_left_white"
        android:layout_marginStart="21dp"
        android:layout_marginTop="83dp"
        android:contentDescription="@string/todo" />

    <FrameLayout
        android:id="@+id/bestMentorsIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp">

        <ImageView
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:src="@drawable/shadow2"
            android:layout_marginStart="69dp"
            android:layout_marginTop="210dp"
            android:contentDescription="@string/todo" />
        <ImageView
            android:id="@+id/img_boarding_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/boarding_two"
            android:layout_gravity="center|top"
            android:layout_marginTop="143dp"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/board2_like"
            android:layout_marginStart="95dp"
            android:layout_marginTop="131dp"
            android:contentDescription="@string/todo" />
    </FrameLayout>

    <TextView
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:text="@string/only_best_mentors"
        android:textColor="@color/white_new"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/sp26"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="4dp"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_boarding2"
        android:layout_width="328dp"
        android:layout_height="58dp"
        app:cornerRadius="10dp"
        android:text="@string/continue_board1"
        android:drawableEnd="@drawable/arrow_right_black"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="84dp"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        style="@style/btn_yellow_and_black"
        />
</FrameLayout>